<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/padding_24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_12dp"
            android:text="@string/quick_settings_title" />

        <com.google.android.material.card.MaterialCardView
            style="?materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:cardBackgroundColor="?attr/colorSurfaceContainer"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_all_menu_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_shortcut_selection" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_12dp"
            android:text="@string/other_title" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/select_app_card"
            style="?materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/colorSurfaceContainer"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_select_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingHorizontal="@dimen/padding_24dp"
                android:paddingVertical="@dimen/padding_20dp">

                <TextView
                    android:id="@+id/tv_shortcuts_selection_title"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/apps_title"
                    app:layout_constraintEnd_toStartOf="@id/img_shortcuts_arrow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_shortcuts_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/shortcuts_title"
                    android:src="@drawable/ic_arrow_forward"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>